--- a/styles.css
+++ b/styles.css
@@ -25,9 +25,9 @@ body {
 
 .principal {
     background-image: url("assets/Background.png");
-    background-repeat: no-repeat; /* não repetir a imagem como espelho de agua*/
-    background-size: contain; /*para preencher todo o espaçamento da imagem dos lados*/
-    align-items: center; /*coloquei o grid em 50%, entao ele vai alinhar o conteudo no centro, ver como funciona no inspecionar*/
+    background-repeat: no-repeat; 
+    background-size: contain; 
+    align-items: center; 
     text-align: center;
 }
 
@@ -85,7 +85,7 @@ body {
 
 .decricao__titulo {
     font-weight: 700;
-    font-size: 48px;
+    font-size: 46px;
     color: var(--branco-primario);
     margin-bottom: 0.1em;
 }
@@ -158,5 +158,3 @@ body {
     color: red;
 }
 
-/* pseudo-classe CSS é uma propriedade Ele detecta, por exemplo, se o elemento está com um mouse em cima dele,
- construindo uma experiência interativa com o usuário.*/
