--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,6 @@
     --botao-azul: #167BF7;
     --cor-de-fundo: #00030C;
     --fonte-princiapl: 'Inter', sans-serif;
-
 }
 
 body {
@@ -56,7 +55,6 @@ body {
     color: var(--cinza-secundario);
     font-size: 12px;
     font-weight: 400;
-    
 }
 
 .container__titulo {
@@ -70,12 +68,10 @@ body {
 
 .container__caixa {
     margin: 0 6em;
-    
 }
 
 .secundario__imagem {
     width: 80%;
-
 }
 
 .secundario {
@@ -158,3 +154,35 @@ body {
     color: red;
 }
 
+@media screen and (max-width: 768px) {
+    .container {
+        display: block;
+        background-image: none;
+    }
+
+    .container__imagem {
+        width: 50vw;
+    }
+
+    .container__caixa {
+        margin: 2em 2em;
+    }
+
+    .secundario {
+        margin: 0;
+        text-align: center;
+    }
+
+    .secundario__imagem {
+        width: 50vw;
+    }
+
+
+    .dispositivos__lista {
+        display: block;
+    }
+
+    .rodape__lista {
+        display: block;
+    }
+}
